plugins/kotlin/idea/tests/testData/multiModuleLineMarker/expectConstructorWithProperties/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>WithConstructor<!>(x: Int, s: String) {
    val <!LINE_MARKER("descr='Has actuals in jvm module'")!>x<!>: Int

    val <!LINE_MARKER("descr='Has actuals in jvm module'")!>s<!>: String
}
